--- a/components/extension.html
+++ b/components/extension.html
@@ -51,7 +51,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js" integrity="sha384-pzjw8Y+ua/cf3I5qXrj/z5A6KOAdiWz9dF83/2i6enL6Z3bq6u2rsVez+Jt9dJ4u" crossorigin="anonymous"></script>
   
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyIdQHiGq9fIivLkCuWrW8dR8Qccit6j" crossorigin="anonymous"></script>
-         
+    
+    <script src="{% static 'js/menu.js' %}"></script>
+    
+    {% block 'script' %}
+    {% endblock %}
   </body>
          
 </html>
