--- a/components/global/partials/header_min.html
+++ b/components/global/partials/header_min.html
@@ -1,5 +1,5 @@
 <div class="main-header-profile">      
-  <a href="{% url 'recipes:recipes' %}" class="header-profile-title">  Receps</a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-title">Recipes</a>
           
   {% if not user.is_authenticated %}
         
