--- a/authors/static/css/form.css
+++ b/authors/static/css/form.css
@@ -241,3 +241,15 @@ input{
   
 
 }
+
+.crud-trash-button {
+  background-color: var(--color-primary-dark);
+  border-radius: 6px;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
