--- a/authors/templates/partials/recipe_create.html
+++ b/authors/templates/partials/recipe_create.html
@@ -1,12 +1,14 @@
 <div class="main-container">
     <div class="main-content main-content-list container">
   
-        <form class="recipe recipe-list-item" method="POST" action="{% url 'authors:create'%}">
+        <form class="recipe recipe-list-item" method="POST" action="{% url 'authors:create'%}" enctype="multipart/form-data">
         
             {% csrf_token %}        
             <!-- IMAGE -->
             <div class="recipe-cover">
-                <img src="https://via.placeholder.com/1280x720.png/000">
+            
+              <i class="fas fa-camera"></i>
+              {{form.cover}}  
             </div>
             
             <!-- TITLE -->
