--- a/components/global/partials/recipes.html
+++ b/components/global/partials/recipes.html
@@ -1,9 +1,8 @@
 <div class="main-container">
     <div class="main-content main-content-list container">
   
-        <form class="recipe recipe-list-item" method="POST" action="{% url 'authors:edit' id=recipe.id %}">
+        <div class="recipe recipe-list-item">
         
-            {% csrf_token %}        
             <!-- IMAGE -->
             <div class="recipe-cover">
                 <img src="https://via.placeholder.com/1280x720.png/000">
@@ -11,35 +10,14 @@
             
             <!-- TITLE -->
             <div class="recipe-title-container">
-                <h2>
-                
-                  {{form.title}}
-                          
-                  {% csrf_token %}
-                
-                  <a class="crud-trash-button" href="{%url 'authors:delete' id=recipe.id %}">
-                  
-                  <i class="fas fa-trash"></i>
-                  
-                  </a>
-                  
-                                                               
-                </h2>                                                
+                <h2>{{recipe.title}}</h2>
             </div>
             
             <!-- AUTHOR -->
             <div class="recipe-author">
-                <span class="author-item">
+                <a href="{% url 'authors:profile' username=recipe.user.username %}" class="author-item">
                     <i class="fas fa-user"></i>
-                    {% if recipe.user is not None%}
-                    
-                      {{recipe.user.username}}
-                      
-                    {% else %}
-                    
-                      Unknow
-                      
-                    {% endif%}
+                    {{recipe.user.username}}
                 </span>
                 
                 <span class="author-item">
@@ -47,12 +25,17 @@
                     {{recipe.date}}
                 </span>
                 
-                <span class="author-item">
+                <a class="author-item" href="{% url 'recipes:category' name=recipe.category.name %}">
                     <i class="fas fa-layer-group"></i>
-                    {{form.category}}
-                </span>
+                    {{recipe.category.name}}
+                </a>
             </div>
-                                    
+            
+            <div class="recipe-content">
+                <p>{{ recipe.description|slice:":40" }}{% if recipe.description|length > 40 %}...{% endif %}</p>
+                
+            </div>
+            
             <!-- METADATA AND USER INFO -->
             <div class="recipe-meta-container">
                 <!-- TIME OF PREPARATION -->
@@ -60,7 +43,7 @@
                     <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i>Preparo</h3>
                     
                     <div class="recipe-meta-text">
-                        {{form.time}}
+                        {{recipe.time}}
                     </div>
                 </div>
                 
@@ -76,13 +59,13 @@
                     
                     {% if recipe.portions < 2%}
                     
-                    {{form.portions}}
+                    {{recipe.portions}} Portion
                     
                     {% endif %}
                     
                     {% if recipe.portions > 2%}
                     
-                    {{form.portions}}
+                    {{recipe.portions}} Portions
                     
                     {% endif %}
                     
@@ -91,25 +74,14 @@
                 </div>
             </div>
             
-            <div class="recipe-title-container">
-            
-                <h3>
-                  <i class="fas fa-blender"></i> 
-                  Details of recipe
-                </h3>
-                
-                <h5>{{form.description}}</h5>
-            </div>
-            
-            <div class="recipe-footer">
-            
-                <button class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipes' %}">
-                    <i class="fas fa-edit"></i>
-                    <span>Edit</span>
-                </button>
-            </div>
+            <footer class="recipe-footer">
+                <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipes-recipe' slug=recipe.slug %}">
+                    <i class="fas fa-eye"></i>
+                    <span>Read more</span>
+                </a>
+            </footer>
                             
-        </form>
+        </div>
       
     </div>
 </div>
