--- a/components/global/partials/search_box.html
+++ b/components/global/partials/search_box.html
@@ -3,7 +3,7 @@
   <form method="POST" action="{% url 'recipes:search' %}" class="main-search-form">
     
     {% csrf_token %}
-    <input type="text" class="search-box" name="search">
+    <input type="text" class="search-box" name="search" value="{{search}}">
   
     <button class="search-button" type="submit">
     
