--- a/components/global/partials/header.html
+++ b/components/global/partials/header.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <header class="main-header-container">
 
   <header class="main-header">
@@ -7,7 +9,7 @@
                    
         <i class="fas fa-utensils"></i>
                         
-          <span class="main-logo-text">Recipes</span>
+          <span class="main-logo-text">{% trans 'Recipes' %}</span>
                                       
       </h1>
       
