--- a/components/global/partials/header_category.html
+++ b/components/global/partials/header_category.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <header class="main-header-container">
 
   <header class="main-header">
@@ -8,7 +10,7 @@
         <i class="{{icon}}"></i>
         
                         
-        <span class="main-logo-text">{{category_name}}</span>
+        <span class="main-logo-text">{% translate category_name %}</span>
                                            
       </h1>
       
