--- a/components/global/partials/menu.html
+++ b/components/global/partials/menu.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <button class="button-show-menu button-show-menu-closed">
 
   <i class="fas fa-bars"></i>
@@ -18,12 +19,12 @@
         <a href="{% url 'authors:profile' %}">Profile</a>
         <a href="{% url 'authors:dashboard' %}"> Dashboard</a>
         <a href="{% url 'authors:create' %}">New recipe</a>
-        <a href="#">Logout</a>
+        <a href="#">{% translate 'Logout' %}</a>
       
       {% else %}
       
-        <a href="{% url 'auth:login' %}">Login</a>
-        <a href="{% url 'auth:register' %}">Sign up </a>
+        <a href="{% url 'auth:login' %}">{% translate 'Login' %}</a>
+        <a href="{% url 'auth:register' %}">{% translate 'Sing Up' %}</a>
         
       {% endif%}
       
