--- a/autentication/templates/pages/register.html
+++ b/autentication/templates/pages/register.html
@@ -1,4 +1,5 @@
 {% extends 'extension.html' %}
+{% load i18n %}
 
 {% block 'head' %}
   {% load static %}
@@ -10,33 +11,65 @@
 {% endblock %}
 
 {% block 'body' %}
+
   <div class="main-container">
+  
     <div class="main-form">
+    
       <form method="POST" action="{% url 'auth:register' %}">
+      
         {% csrf_token %}
-        <h1>Sign Up</h1>
+        
+        <h1>{% translate 'Sing Up' %}</h1>
+        
         <hr>
+        
         <h4>Email:</h4>
+        
         {{ form.email }}
+        
+        <hr>
+        
         {% if messages %}
+        
           {% for message in messages %}
+          
             <h5>( ! ) {{ message }}</h5>
+            
           {% endfor %}
+          
         {% endif %}
-        <h4>Password:</h4>
+        
+        <h4>{% translate 'Password' %}:</h4>
+        
         <div class="password-content">
+        
           <input type="password" name="password" id="passwordInput" minlength="8" required>
+          
           <i class="fas fa-eye password-toggle" onclick="togglePasswordVisibility()"></i>
+          
         </div>
-        <h4>Repeat Password:</h4>
+        
+        <h4>{% translate 'Repeat password' %}:</h4>
+        
         <div class="password-content">
+        
           <input type="password" name="password-repeat" id="passwordRepeatInput" minlength="8" required>
+          
           <i class="fas fa-eye password-repeat-toggle" onclick="togglePasswordRepeatVisibility()"></i>
+          
         </div>
-        <a href="{% url 'auth:login' %}">Have an account? Log in</a>
-        <button id="button-register">Register</button>
+        
+        <br>
+        
+        <a href="{% url 'auth:login' %}">{% translate 'Have an account? Log in' %}</a>
+        
+        <button id="button-register">{% translate 'Sing Up' %}</button>
       </form>
+      
     </div>
+    
   </div>
+  
   <script src="{% static 'js/signup.js' %}"></script>
 {% endblock %}
