--- a/components/global/partials/header_min.html
+++ b/components/global/partials/header_min.html
@@ -1,10 +1,11 @@
+{% load i18n %}
 <div class="main-header-profile">      
-  <a href="{% url 'recipes:recipes' %}" class="header-profile-title">Recipes</a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-title">{% translate 'Recipes' %}</a>
           
   {% if not user.is_authenticated %}
         
-  <a href="{% url 'recipes:recipes' %}" class="header-profile-enter"> Enter</a>
-  <a href="{% url 'recipes:recipes' %}" class="header-profile-register"> Sing Up </a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-enter">{% translate 'Login' %}</a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-register"> {% translate 'Sing Up' %}</a>
         
   {% endif %}
         
