--- a/components/global/partials/recipes.html
+++ b/components/global/partials/recipes.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="main-container">
     <div class="main-content main-content-list container">
   
@@ -10,7 +11,7 @@
             
             <!-- TITLE -->
             <div class="recipe-title-container">
-                <h2>{{recipe.title}}</h2>
+                <h2>{% translate recipe.title %}</h2>
             </div>
             
             <!-- AUTHOR -->
@@ -27,12 +28,12 @@
                 
                 <a class="author-item" href="{% url 'recipes:category' name=recipe.category.name %}">
                     <i class="fas fa-layer-group"></i>
-                    {{recipe.category.name}}
+                    {% translate recipe.category.name %}
                 </a>
             </div>
             
             <div class="recipe-content">
-                <p>{{ recipe.description|slice:":40" }}{% if recipe.description|length > 40 %}...{% endif %}</p>
+                <p>{% translate recipe.description|slice:":40" %}{% if recipe.description|length > 40 %}...{% endif %}</p>
                 
             </div>
             
@@ -40,7 +41,7 @@
             <div class="recipe-meta-container">
                 <!-- TIME OF PREPARATION -->
                 <div class="recipe-meta recipe-preparation">
-                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i>Preparo</h3>
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i>{% translate 'Preparation' %}</h3>
                     
                     <div class="recipe-meta-text">
                         {{recipe.time}}
@@ -52,7 +53,7 @@
                     <h3 class="recipe-meta-title">
                         <i class="fas fa-pizza-slice"></i>
                                                 
-                        Portions
+                        {% translate 'Portions' %}
                     </h3>
                     
                     <div class="recipe-meta-text">
@@ -65,7 +66,7 @@
                     
                     {% if recipe.portions > 2%}
                     
-                    {{recipe.portions}} Portions
+                    {{recipe.portions}} {% translate 'Portions' %}
                     
                     {% endif %}
                     
@@ -77,7 +78,7 @@
             <footer class="recipe-footer">
                 <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipes-recipe' slug=recipe.slug %}">
                     <i class="fas fa-eye"></i>
-                    <span>Read more</span>
+                    <span>{% translate 'Read more' %}</span>
                 </a>
             </footer>
                             
